classDiagram
    %% Replace the placeholders below with your actual classes, attributes, methods, and relationships.
    %% Keep this file updated so it matches your final implementation.

    class Owner{
        +int owner_id
        +str name
        +list preferred_times
        +list preferences
        +add_pet(pet: Pet)
    }


class Pet{
    +int pet_id
    +str name
    +str species
    +int age
    +str energy_level
    +add_task(task: Task)
}

class Task{
    +int task_id
    +str title
    +str category
    +int duration_minutes
    +str priority
    +str preferred_time
    +bool is_recurring
    +get_priority_score()
}

class Scheduler{
    +int available_minutes
    +str start_time
    +str end_time
    +generate_daily_plan(owner: Owner, pet: Pet, tasks: list[Task])
    +sort_tasks(tasks: list[Task])
    +filter_tasks(tasks: list[Task])
    +resolve_conflicts(plan: DailyPlan)
}

class PlanEntry{
    +str time_slot
    +Task task
    +str reason
    +to_string()
}

class DailyPlan{
    +str date
    +list entries
    +add_entry(entry: PlanEntry)
    +summarize()
}

Owner "1" --> "1..*" Pet : owns
Pet "1" --> "0..*" Task : has

Scheduler ..> Owner : uses
Scheduler ..> Pet : uses
Scheduler ..> Task : uses
Scheduler ..> DailyPlan : creates

DailyPlan "1" --> "1..*" PlanEntry : contains
PlanEntry --> Task : references
}